// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> default icon should match snapshot 1`] = `
.c0 {
  font-family: icons;
  font-size: 1rem;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  speak: none;
  text-transform: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0:before {
  content: "\\e906";
}

<i
  className="c0"
/>
`;

exports[`<Icon /> inverse link should match snapshot 1`] = `
.c0 {
  color: #f6f6f6;
  font-family: icons;
  font-size: 1rem;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  speak: none;
  text-transform: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0:before {
  content: "\\e906";
}

<i
  className="c0"
/>
`;
